parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     program -> empty
Rule 4     statement -> COMMENT_LINE
Rule 5     statement -> COMMENT_BLOCK
Rule 6     statement -> WAX IDENT COLON IDENT EQUAL expression SEMI
Rule 7     statement -> IDENT EQUAL expression SEMI
Rule 8     statement -> IDENT PLUSEQ expression SEMI
Rule 9     statement -> IDENT MINUSEQ expression SEMI
Rule 10    statement -> IDENT STAREQ expression SEMI
Rule 11    statement -> IDENT SLASHEQ expression SEMI
Rule 12    statement -> IDENT PLUSPLUS SEMI
Rule 13    statement -> IDENT MINUSMINUS SEMI
Rule 14    statement -> PLUSPLUS IDENT SEMI
Rule 15    statement -> MINUSMINUS IDENT SEMI
Rule 16    statement -> ident_list EQUAL expression_list SEMI
Rule 17    statement -> IDENT DOT APPEND LPAREN expression RPAREN SEMI
Rule 18    statement -> IDENT DOT REMOVE LPAREN expression RPAREN SEMI
Rule 19    statement -> IF LPAREN expression RPAREN LBRACE program RBRACE
Rule 20    statement -> IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
Rule 21    statement -> FOR LPAREN WAX IDENT COLON IDENT EQUAL expression SEMI expression SEMI for_increment RPAREN LBRACE program RBRACE
Rule 22    for_increment -> IDENT PLUSPLUS
Rule 23    for_increment -> IDENT MINUSMINUS
Rule 24    for_increment -> PLUSPLUS IDENT
Rule 25    for_increment -> MINUSMINUS IDENT
Rule 26    for_increment -> IDENT PLUSEQ expression
Rule 27    for_increment -> IDENT MINUSEQ expression
Rule 28    for_increment -> IDENT STAREQ expression
Rule 29    for_increment -> IDENT SLASHEQ expression
Rule 30    for_increment -> IDENT EQUAL expression
Rule 31    statement -> WHILE LPAREN expression RPAREN LBRACE program RBRACE
Rule 32    statement -> PRINT LPAREN expression RPAREN SEMI
Rule 33    return_type -> IDENT
Rule 34    return_type -> VOID
Rule 35    statement -> RETURN expression_list SEMI
Rule 36    statement -> RETURN SEMI
Rule 37    statement -> WAX FUNCTION IDENT COLON return_type LPAREN paramlist RPAREN LBRACE program RBRACE
Rule 38    statement -> expression SEMI
Rule 39    expression -> expression PLUS expression
Rule 40    expression -> expression MINUS expression
Rule 41    expression -> expression STAR expression
Rule 42    expression -> expression SLASH expression
Rule 43    expression -> expression MOD expression
Rule 44    expression -> expression POW expression
Rule 45    expression -> expression LT expression
Rule 46    expression -> expression LE expression
Rule 47    expression -> expression GT expression
Rule 48    expression -> expression GE expression
Rule 49    expression -> expression EQEQ expression
Rule 50    expression -> expression NOTEQ expression
Rule 51    expression -> expression AND expression
Rule 52    expression -> expression OR expression
Rule 53    expression -> LPAREN expression RPAREN
Rule 54    expression -> INT
Rule 55    expression -> DOUBLE
Rule 56    expression -> STRING
Rule 57    expression -> BOOL
Rule 58    expression -> NOT expression
Rule 59    expression -> MINUS expression
Rule 60    expression -> IDENT
Rule 61    expression -> LBRACKET list_items RBRACKET
Rule 62    list_items -> list_items COMMA expression
Rule 63    list_items -> expression
Rule 64    list_items -> empty
Rule 65    expression -> IDENT LBRACKET expression RBRACKET
Rule 66    expression -> IDENT LPAREN arglist RPAREN
Rule 67    expression -> STR LPAREN expression RPAREN
Rule 68    expression -> INPUT LPAREN RPAREN
Rule 69    expression -> INPUT LPAREN expression RPAREN
Rule 70    arglist -> arglist COMMA expression
Rule 71    arglist -> expression
Rule 72    arglist -> empty
Rule 73    expression_list -> expression_list COMMA expression
Rule 74    expression_list -> expression
Rule 75    ident_list -> ident_list COMMA IDENT
Rule 76    ident_list -> IDENT
Rule 77    paramlist -> paramlist COMMA IDENT COLON IDENT
Rule 78    paramlist -> IDENT COLON IDENT
Rule 79    paramlist -> empty
Rule 80    empty -> <empty>

Terminals, with rules where they appear

AND                  : 51
APPEND               : 17
BOOL                 : 57
COLON                : 6 21 37 77 78
COMMA                : 62 70 73 75 77
COMMENT_BLOCK        : 5
COMMENT_LINE         : 4
DOT                  : 17 18
DOUBLE               : 55
ELSE                 : 20
EQEQ                 : 49
EQUAL                : 6 7 16 21 30
FOR                  : 21
FUNCTION             : 37
GE                   : 48
GT                   : 47
IDENT                : 6 6 7 8 9 10 11 12 13 14 15 17 18 21 21 22 23 24 25 26 27 28 29 30 33 37 60 65 66 75 76 77 77 78 78
IF                   : 19 20
INPUT                : 68 69
INT                  : 54
LBRACE               : 19 20 20 21 31 37
LBRACKET             : 61 65
LE                   : 46
LPAREN               : 17 18 19 20 21 31 32 37 53 66 67 68 69
LT                   : 45
MINUS                : 40 59
MINUSEQ              : 9 27
MINUSMINUS           : 13 15 23 25
MOD                  : 43
NOT                  : 58
NOTEQ                : 50
OR                   : 52
PLUS                 : 39
PLUSEQ               : 8 26
PLUSPLUS             : 12 14 22 24
POW                  : 44
PRINT                : 32
RBRACE               : 19 20 20 21 31 37
RBRACKET             : 61 65
REMOVE               : 18
RETURN               : 35 36
RPAREN               : 17 18 19 20 21 31 32 37 53 66 67 68 69
SEMI                 : 6 7 8 9 10 11 12 13 14 15 16 17 18 21 21 32 35 36 38
SLASH                : 42
SLASHEQ              : 11 29
STAR                 : 41
STAREQ               : 10 28
STR                  : 67
STRING               : 56
VOID                 : 34
WAX                  : 6 21 37
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

arglist              : 66 70
empty                : 3 64 72 79
expression           : 6 7 8 9 10 11 17 18 19 20 21 21 26 27 28 29 30 31 32 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 58 59 62 63 65 67 69 70 71 73 74
expression_list      : 16 35 73
for_increment        : 21
ident_list           : 16 75
list_items           : 61 62
paramlist            : 37 77
program              : 1 19 20 20 21 31 37 0
return_type          : 37
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) program -> . empty
    (4) statement -> . COMMENT_LINE
    (5) statement -> . COMMENT_BLOCK
    (6) statement -> . WAX IDENT COLON IDENT EQUAL expression SEMI
    (7) statement -> . IDENT EQUAL expression SEMI
    (8) statement -> . IDENT PLUSEQ expression SEMI
    (9) statement -> . IDENT MINUSEQ expression SEMI
    (10) statement -> . IDENT STAREQ expression SEMI
    (11) statement -> . IDENT SLASHEQ expression SEMI
    (12) statement -> . IDENT PLUSPLUS SEMI
    (13) statement -> . IDENT MINUSMINUS SEMI
    (14) statement -> . PLUSPLUS IDENT SEMI
    (15) statement -> . MINUSMINUS IDENT SEMI
    (16) statement -> . ident_list EQUAL expression_list SEMI
    (17) statement -> . IDENT DOT APPEND LPAREN expression RPAREN SEMI
    (18) statement -> . IDENT DOT REMOVE LPAREN expression RPAREN SEMI
    (19) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (20) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (21) statement -> . FOR LPAREN WAX IDENT COLON IDENT EQUAL expression SEMI expression SEMI for_increment RPAREN LBRACE program RBRACE
    (31) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (32) statement -> . PRINT LPAREN expression RPAREN SEMI
    (35) statement -> . RETURN expression_list SEMI
    (36) statement -> . RETURN SEMI
    (37) statement -> . WAX FUNCTION IDENT COLON return_type LPAREN paramlist RPAREN LBRACE program RBRACE
    (38) statement -> . expression SEMI
    (80) empty -> .
    (75) ident_list -> . ident_list COMMA IDENT
    (76) ident_list -> . IDENT
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression STAR expression
    (42) expression -> . expression SLASH expression
    (43) expression -> . expression MOD expression
    (44) expression -> . expression POW expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GT expression
    (48) expression -> . expression GE expression
    (49) expression -> . expression EQEQ expression
    (50) expression -> . expression NOTEQ expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . INT
    (55) expression -> . DOUBLE
    (56) expression -> . STRING
    (57) expression -> . BOOL
    (58) expression -> . NOT expression
    (59) expression -> . MINUS expression
    (60) expression -> . IDENT
    (61) expression -> . LBRACKET list_items RBRACKET
    (65) expression -> . IDENT LBRACKET expression RBRACKET
    (66) expression -> . IDENT LPAREN arglist RPAREN
    (67) expression -> . STR LPAREN expression RPAREN
    (68) expression -> . INPUT LPAREN RPAREN
    (69) expression -> . INPUT LPAREN expression RPAREN

  ! shift/reduce conflict for COMMENT_LINE resolved as shift
  ! shift/reduce conflict for COMMENT_BLOCK resolved as shift
  ! shift/reduce conflict for WAX resolved as shift
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for PLUSPLUS resolved as shift
  ! shift/reduce conflict for MINUSMINUS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
    COMMENT_LINE    shift and go to state 4
    COMMENT_BLOCK   shift and go to state 5
    WAX             shift and go to state 6
    IDENT           shift and go to state 7
    PLUSPLUS        shift and go to state 9
    MINUSMINUS      shift and go to state 10
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    $end            reduce using rule 80 (empty -> .)
    LPAREN          shift and go to state 12
    INT             shift and go to state 19
    DOUBLE          shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22
    NOT             shift and go to state 23
    MINUS           shift and go to state 18
    LBRACKET        shift and go to state 24
    STR             shift and go to state 25
    INPUT           shift and go to state 26

  ! COMMENT_LINE    [ reduce using rule 80 (empty -> .) ]
  ! COMMENT_BLOCK   [ reduce using rule 80 (empty -> .) ]
  ! WAX             [ reduce using rule 80 (empty -> .) ]
  ! IDENT           [ reduce using rule 80 (empty -> .) ]
  ! PLUSPLUS        [ reduce using rule 80 (empty -> .) ]
  ! MINUSMINUS      [ reduce using rule 80 (empty -> .) ]
  ! IF              [ reduce using rule 80 (empty -> .) ]
  ! FOR             [ reduce using rule 80 (empty -> .) ]
  ! WHILE           [ reduce using rule 80 (empty -> .) ]
  ! PRINT           [ reduce using rule 80 (empty -> .) ]
  ! RETURN          [ reduce using rule 80 (empty -> .) ]
  ! LPAREN          [ reduce using rule 80 (empty -> .) ]
  ! INT             [ reduce using rule 80 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 80 (empty -> .) ]
  ! STRING          [ reduce using rule 80 (empty -> .) ]
  ! BOOL            [ reduce using rule 80 (empty -> .) ]
  ! NOT             [ reduce using rule 80 (empty -> .) ]
  ! MINUS           [ reduce using rule 80 (empty -> .) ]
  ! LBRACKET        [ reduce using rule 80 (empty -> .) ]
  ! STR             [ reduce using rule 80 (empty -> .) ]
  ! INPUT           [ reduce using rule 80 (empty -> .) ]

    program                        shift and go to state 1
    statement                      shift and go to state 2
    empty                          shift and go to state 3
    expression                     shift and go to state 8
    ident_list                     shift and go to state 11

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (4) statement -> . COMMENT_LINE
    (5) statement -> . COMMENT_BLOCK
    (6) statement -> . WAX IDENT COLON IDENT EQUAL expression SEMI
    (7) statement -> . IDENT EQUAL expression SEMI
    (8) statement -> . IDENT PLUSEQ expression SEMI
    (9) statement -> . IDENT MINUSEQ expression SEMI
    (10) statement -> . IDENT STAREQ expression SEMI
    (11) statement -> . IDENT SLASHEQ expression SEMI
    (12) statement -> . IDENT PLUSPLUS SEMI
    (13) statement -> . IDENT MINUSMINUS SEMI
    (14) statement -> . PLUSPLUS IDENT SEMI
    (15) statement -> . MINUSMINUS IDENT SEMI
    (16) statement -> . ident_list EQUAL expression_list SEMI
    (17) statement -> . IDENT DOT APPEND LPAREN expression RPAREN SEMI
    (18) statement -> . IDENT DOT REMOVE LPAREN expression RPAREN SEMI
    (19) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (20) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (21) statement -> . FOR LPAREN WAX IDENT COLON IDENT EQUAL expression SEMI expression SEMI for_increment RPAREN LBRACE program RBRACE
    (31) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (32) statement -> . PRINT LPAREN expression RPAREN SEMI
    (35) statement -> . RETURN expression_list SEMI
    (36) statement -> . RETURN SEMI
    (37) statement -> . WAX FUNCTION IDENT COLON return_type LPAREN paramlist RPAREN LBRACE program RBRACE
    (38) statement -> . expression SEMI
    (75) ident_list -> . ident_list COMMA IDENT
    (76) ident_list -> . IDENT
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression STAR expression
    (42) expression -> . expression SLASH expression
    (43) expression -> . expression MOD expression
    (44) expression -> . expression POW expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GT expression
    (48) expression -> . expression GE expression
    (49) expression -> . expression EQEQ expression
    (50) expression -> . expression NOTEQ expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . INT
    (55) expression -> . DOUBLE
    (56) expression -> . STRING
    (57) expression -> . BOOL
    (58) expression -> . NOT expression
    (59) expression -> . MINUS expression
    (60) expression -> . IDENT
    (61) expression -> . LBRACKET list_items RBRACKET
    (65) expression -> . IDENT LBRACKET expression RBRACKET
    (66) expression -> . IDENT LPAREN arglist RPAREN
    (67) expression -> . STR LPAREN expression RPAREN
    (68) expression -> . INPUT LPAREN RPAREN
    (69) expression -> . INPUT LPAREN expression RPAREN

    COMMENT_LINE    shift and go to state 4
    COMMENT_BLOCK   shift and go to state 5
    WAX             shift and go to state 6
    IDENT           shift and go to state 7
    PLUSPLUS        shift and go to state 9
    MINUSMINUS      shift and go to state 10
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    LPAREN          shift and go to state 12
    INT             shift and go to state 19
    DOUBLE          shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22
    NOT             shift and go to state 23
    MINUS           shift and go to state 18
    LBRACKET        shift and go to state 24
    STR             shift and go to state 25
    INPUT           shift and go to state 26

    statement                      shift and go to state 27
    expression                     shift and go to state 8
    ident_list                     shift and go to state 11

state 2

    (2) program -> statement .

    COMMENT_LINE    reduce using rule 2 (program -> statement .)
    COMMENT_BLOCK   reduce using rule 2 (program -> statement .)
    WAX             reduce using rule 2 (program -> statement .)
    IDENT           reduce using rule 2 (program -> statement .)
    PLUSPLUS        reduce using rule 2 (program -> statement .)
    MINUSMINUS      reduce using rule 2 (program -> statement .)
    IF              reduce using rule 2 (program -> statement .)
    FOR             reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    PRINT           reduce using rule 2 (program -> statement .)
    RETURN          reduce using rule 2 (program -> statement .)
    LPAREN          reduce using rule 2 (program -> statement .)
    INT             reduce using rule 2 (program -> statement .)
    DOUBLE          reduce using rule 2 (program -> statement .)
    STRING          reduce using rule 2 (program -> statement .)
    BOOL            reduce using rule 2 (program -> statement .)
    NOT             reduce using rule 2 (program -> statement .)
    MINUS           reduce using rule 2 (program -> statement .)
    LBRACKET        reduce using rule 2 (program -> statement .)
    STR             reduce using rule 2 (program -> statement .)
    INPUT           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    RBRACE          reduce using rule 2 (program -> statement .)


state 3

    (3) program -> empty .

    COMMENT_LINE    reduce using rule 3 (program -> empty .)
    COMMENT_BLOCK   reduce using rule 3 (program -> empty .)
    WAX             reduce using rule 3 (program -> empty .)
    IDENT           reduce using rule 3 (program -> empty .)
    PLUSPLUS        reduce using rule 3 (program -> empty .)
    MINUSMINUS      reduce using rule 3 (program -> empty .)
    IF              reduce using rule 3 (program -> empty .)
    FOR             reduce using rule 3 (program -> empty .)
    WHILE           reduce using rule 3 (program -> empty .)
    PRINT           reduce using rule 3 (program -> empty .)
    RETURN          reduce using rule 3 (program -> empty .)
    LPAREN          reduce using rule 3 (program -> empty .)
    INT             reduce using rule 3 (program -> empty .)
    DOUBLE          reduce using rule 3 (program -> empty .)
    STRING          reduce using rule 3 (program -> empty .)
    BOOL            reduce using rule 3 (program -> empty .)
    NOT             reduce using rule 3 (program -> empty .)
    MINUS           reduce using rule 3 (program -> empty .)
    LBRACKET        reduce using rule 3 (program -> empty .)
    STR             reduce using rule 3 (program -> empty .)
    INPUT           reduce using rule 3 (program -> empty .)
    $end            reduce using rule 3 (program -> empty .)
    RBRACE          reduce using rule 3 (program -> empty .)


state 4

    (4) statement -> COMMENT_LINE .

    COMMENT_LINE    reduce using rule 4 (statement -> COMMENT_LINE .)
    COMMENT_BLOCK   reduce using rule 4 (statement -> COMMENT_LINE .)
    WAX             reduce using rule 4 (statement -> COMMENT_LINE .)
    IDENT           reduce using rule 4 (statement -> COMMENT_LINE .)
    PLUSPLUS        reduce using rule 4 (statement -> COMMENT_LINE .)
    MINUSMINUS      reduce using rule 4 (statement -> COMMENT_LINE .)
    IF              reduce using rule 4 (statement -> COMMENT_LINE .)
    FOR             reduce using rule 4 (statement -> COMMENT_LINE .)
    WHILE           reduce using rule 4 (statement -> COMMENT_LINE .)
    PRINT           reduce using rule 4 (statement -> COMMENT_LINE .)
    RETURN          reduce using rule 4 (statement -> COMMENT_LINE .)
    LPAREN          reduce using rule 4 (statement -> COMMENT_LINE .)
    INT             reduce using rule 4 (statement -> COMMENT_LINE .)
    DOUBLE          reduce using rule 4 (statement -> COMMENT_LINE .)
    STRING          reduce using rule 4 (statement -> COMMENT_LINE .)
    BOOL            reduce using rule 4 (statement -> COMMENT_LINE .)
    NOT             reduce using rule 4 (statement -> COMMENT_LINE .)
    MINUS           reduce using rule 4 (statement -> COMMENT_LINE .)
    LBRACKET        reduce using rule 4 (statement -> COMMENT_LINE .)
    STR             reduce using rule 4 (statement -> COMMENT_LINE .)
    INPUT           reduce using rule 4 (statement -> COMMENT_LINE .)
    $end            reduce using rule 4 (statement -> COMMENT_LINE .)
    RBRACE          reduce using rule 4 (statement -> COMMENT_LINE .)


state 5

    (5) statement -> COMMENT_BLOCK .

    COMMENT_LINE    reduce using rule 5 (statement -> COMMENT_BLOCK .)
    COMMENT_BLOCK   reduce using rule 5 (statement -> COMMENT_BLOCK .)
    WAX             reduce using rule 5 (statement -> COMMENT_BLOCK .)
    IDENT           reduce using rule 5 (statement -> COMMENT_BLOCK .)
    PLUSPLUS        reduce using rule 5 (statement -> COMMENT_BLOCK .)
    MINUSMINUS      reduce using rule 5 (statement -> COMMENT_BLOCK .)
    IF              reduce using rule 5 (statement -> COMMENT_BLOCK .)
    FOR             reduce using rule 5 (statement -> COMMENT_BLOCK .)
    WHILE           reduce using rule 5 (statement -> COMMENT_BLOCK .)
    PRINT           reduce using rule 5 (statement -> COMMENT_BLOCK .)
    RETURN          reduce using rule 5 (statement -> COMMENT_BLOCK .)
    LPAREN          reduce using rule 5 (statement -> COMMENT_BLOCK .)
    INT             reduce using rule 5 (statement -> COMMENT_BLOCK .)
    DOUBLE          reduce using rule 5 (statement -> COMMENT_BLOCK .)
    STRING          reduce using rule 5 (statement -> COMMENT_BLOCK .)
    BOOL            reduce using rule 5 (statement -> COMMENT_BLOCK .)
    NOT             reduce using rule 5 (statement -> COMMENT_BLOCK .)
    MINUS           reduce using rule 5 (statement -> COMMENT_BLOCK .)
    LBRACKET        reduce using rule 5 (statement -> COMMENT_BLOCK .)
    STR             reduce using rule 5 (statement -> COMMENT_BLOCK .)
    INPUT           reduce using rule 5 (statement -> COMMENT_BLOCK .)
    $end            reduce using rule 5 (statement -> COMMENT_BLOCK .)
    RBRACE          reduce using rule 5 (statement -> COMMENT_BLOCK .)


state 6

    (6) statement -> WAX . IDENT COLON IDENT EQUAL expression SEMI
    (37) statement -> WAX . FUNCTION IDENT COLON return_type LPAREN paramlist RPAREN LBRACE program RBRACE

    IDENT           shift and go to state 28
    FUNCTION        shift and go to state 29


state 7

    (7) statement -> IDENT . EQUAL expression SEMI
    (8) statement -> IDENT . PLUSEQ expression SEMI
    (9) statement -> IDENT . MINUSEQ expression SEMI
    (10) statement -> IDENT . STAREQ expression SEMI
    (11) statement -> IDENT . SLASHEQ expression SEMI
    (12) statement -> IDENT . PLUSPLUS SEMI
    (13) statement -> IDENT . MINUSMINUS SEMI
    (17) statement -> IDENT . DOT APPEND LPAREN expression RPAREN SEMI
    (18) statement -> IDENT . DOT REMOVE LPAREN expression RPAREN SEMI
    (76) ident_list -> IDENT .
    (60) expression -> IDENT .
    (65) expression -> IDENT . LBRACKET expression RBRACKET
    (66) expression -> IDENT . LPAREN arglist RPAREN

  ! shift/reduce conflict for EQUAL resolved as shift
    EQUAL           shift and go to state 30
    PLUSEQ          shift and go to state 31
    MINUSEQ         shift and go to state 32
    STAREQ          shift and go to state 33
    SLASHEQ         shift and go to state 34
    PLUSPLUS        shift and go to state 35
    MINUSMINUS      shift and go to state 36
    DOT             shift and go to state 37
    COMMA           reduce using rule 76 (ident_list -> IDENT .)
    SEMI            reduce using rule 60 (expression -> IDENT .)
    PLUS            reduce using rule 60 (expression -> IDENT .)
    MINUS           reduce using rule 60 (expression -> IDENT .)
    STAR            reduce using rule 60 (expression -> IDENT .)
    SLASH           reduce using rule 60 (expression -> IDENT .)
    MOD             reduce using rule 60 (expression -> IDENT .)
    POW             reduce using rule 60 (expression -> IDENT .)
    LT              reduce using rule 60 (expression -> IDENT .)
    LE              reduce using rule 60 (expression -> IDENT .)
    GT              reduce using rule 60 (expression -> IDENT .)
    GE              reduce using rule 60 (expression -> IDENT .)
    EQEQ            reduce using rule 60 (expression -> IDENT .)
    NOTEQ           reduce using rule 60 (expression -> IDENT .)
    AND             reduce using rule 60 (expression -> IDENT .)
    OR              reduce using rule 60 (expression -> IDENT .)
    LBRACKET        shift and go to state 39
    LPAREN          shift and go to state 38

  ! EQUAL           [ reduce using rule 76 (ident_list -> IDENT .) ]


state 8

    (38) statement -> expression . SEMI
    (39) expression -> expression . PLUS expression
    (40) expression -> expression . MINUS expression
    (41) expression -> expression . STAR expression
    (42) expression -> expression . SLASH expression
    (43) expression -> expression . MOD expression
    (44) expression -> expression . POW expression
    (45) expression -> expression . LT expression
    (46) expression -> expression . LE expression
    (47) expression -> expression . GT expression
    (48) expression -> expression . GE expression
    (49) expression -> expression . EQEQ expression
    (50) expression -> expression . NOTEQ expression
    (51) expression -> expression . AND expression
    (52) expression -> expression . OR expression

    SEMI            shift and go to state 40
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    STAR            shift and go to state 43
    SLASH           shift and go to state 44
    MOD             shift and go to state 45
    POW             shift and go to state 46
    LT              shift and go to state 47
    LE              shift and go to state 48
    GT              shift and go to state 49
    GE              shift and go to state 50
    EQEQ            shift and go to state 51
    NOTEQ           shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54


state 9

    (14) statement -> PLUSPLUS . IDENT SEMI

    IDENT           shift and go to state 55


state 10

    (15) statement -> MINUSMINUS . IDENT SEMI

    IDENT           shift and go to state 56


state 11

    (16) statement -> ident_list . EQUAL expression_list SEMI
    (75) ident_list -> ident_list . COMMA IDENT

    EQUAL           shift and go to state 57
    COMMA           shift and go to state 58


state 12

    (53) expression -> LPAREN . expression RPAREN
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression STAR expression
    (42) expression -> . expression SLASH expression
    (43) expression -> . expression MOD expression
    (44) expression -> . expression POW expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GT expression
    (48) expression -> . expression GE expression
    (49) expression -> . expression EQEQ expression
    (50) expression -> . expression NOTEQ expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . INT
    (55) expression -> . DOUBLE
    (56) expression -> . STRING
    (57) expression -> . BOOL
    (58) expression -> . NOT expression
    (59) expression -> . MINUS expression
    (60) expression -> . IDENT
    (61) expression -> . LBRACKET list_items RBRACKET
    (65) expression -> . IDENT LBRACKET expression RBRACKET
    (66) expression -> . IDENT LPAREN arglist RPAREN
    (67) expression -> . STR LPAREN expression RPAREN
    (68) expression -> . INPUT LPAREN RPAREN
    (69) expression -> . INPUT LPAREN expression RPAREN

    LPAREN          shift and go to state 12
    INT             shift and go to state 19
    DOUBLE          shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22
    NOT             shift and go to state 23
    MINUS           shift and go to state 18
    IDENT           shift and go to state 60
    LBRACKET        shift and go to state 24
    STR             shift and go to state 25
    INPUT           shift and go to state 26

    expression                     shift and go to state 59

state 13

    (19) statement -> IF . LPAREN expression RPAREN LBRACE program RBRACE
    (20) statement -> IF . LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE

    LPAREN          shift and go to state 61


state 14

    (21) statement -> FOR . LPAREN WAX IDENT COLON IDENT EQUAL expression SEMI expression SEMI for_increment RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 62


state 15

    (31) statement -> WHILE . LPAREN expression RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 63


state 16

    (32) statement -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 64


state 17

    (35) statement -> RETURN . expression_list SEMI
    (36) statement -> RETURN . SEMI
    (73) expression_list -> . expression_list COMMA expression
    (74) expression_list -> . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression STAR expression
    (42) expression -> . expression SLASH expression
    (43) expression -> . expression MOD expression
    (44) expression -> . expression POW expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GT expression
    (48) expression -> . expression GE expression
    (49) expression -> . expression EQEQ expression
    (50) expression -> . expression NOTEQ expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . INT
    (55) expression -> . DOUBLE
    (56) expression -> . STRING
    (57) expression -> . BOOL
    (58) expression -> . NOT expression
    (59) expression -> . MINUS expression
    (60) expression -> . IDENT
    (61) expression -> . LBRACKET list_items RBRACKET
    (65) expression -> . IDENT LBRACKET expression RBRACKET
    (66) expression -> . IDENT LPAREN arglist RPAREN
    (67) expression -> . STR LPAREN expression RPAREN
    (68) expression -> . INPUT LPAREN RPAREN
    (69) expression -> . INPUT LPAREN expression RPAREN

    SEMI            shift and go to state 66
    LPAREN          shift and go to state 12
    INT             shift and go to state 19
    DOUBLE          shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22
    NOT             shift and go to state 23
    MINUS           shift and go to state 18
    IDENT           shift and go to state 60
    LBRACKET        shift and go to state 24
    STR             shift and go to state 25
    INPUT           shift and go to state 26

    expression_list                shift and go to state 65
    expression                     shift and go to state 67

state 18

    (59) expression -> MINUS . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression STAR expression
    (42) expression -> . expression SLASH expression
    (43) expression -> . expression MOD expression
    (44) expression -> . expression POW expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GT expression
    (48) expression -> . expression GE expression
    (49) expression -> . expression EQEQ expression
    (50) expression -> . expression NOTEQ expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . INT
    (55) expression -> . DOUBLE
    (56) expression -> . STRING
    (57) expression -> . BOOL
    (58) expression -> . NOT expression
    (59) expression -> . MINUS expression
    (60) expression -> . IDENT
    (61) expression -> . LBRACKET list_items RBRACKET
    (65) expression -> . IDENT LBRACKET expression RBRACKET
    (66) expression -> . IDENT LPAREN arglist RPAREN
    (67) expression -> . STR LPAREN expression RPAREN
    (68) expression -> . INPUT LPAREN RPAREN
    (69) expression -> . INPUT LPAREN expression RPAREN

    LPAREN          shift and go to state 12
    INT             shift and go to state 19
    DOUBLE          shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22
    NOT             shift and go to state 23
    MINUS           shift and go to state 18
    IDENT           shift and go to state 60
    LBRACKET        shift and go to state 24
    STR             shift and go to state 25
    INPUT           shift and go to state 26

    expression                     shift and go to state 68

state 19

    (54) expression -> INT .
